made adjustments to cover page

--- a/public/index.html
+++ b/public/index.html
@@ -7,21 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FoodGasm</title>
     <link rel="stylesheet" href="css/styles.css">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-    </style>
+
 </head>
 
 <body>
-    <div class="bg-green-500 w-screen h-screen ">
+    <div class="bg-gradient-to-br from-purple-500 to-cyan-500 via-pink-500 w-full h-screen ">
         <div>
             <nav>
                 <div>
-                    <h1 class="font-black text-5xl mx-6 my-6 text-green-400">
+                    <h1 class="font-black text-5xl px-4 py-4 text-black">
                         <a href="/">FoodGasm</a>
                     </h1>
                 </div>
@@ -33,7 +27,7 @@
                     </li>
                     <li>
                         <a href="#">
-                            <span class="font-bold text-3xl text-slate-50  ">About</span>
+                            <span class="font-bold text-3xl text-slate-50">About</span>
                         </a>
                     </li>
                     <li>
@@ -48,38 +42,38 @@
 
             <div class="flex justify-end gap-x-6 relative items-baseline bottom-24">
                 <a href="#"
-                    class="px-6 py-2 text-lg border-solid rounded-3xl bg-green-400 text-slate-50 font-bold hover:bg-green-600 font-sans focus:ring focus:ring-green-50 ">Log
+                    class="px-6 py-2 text-lg border-solid rounded-3xl bg-purple-700 text-black font-bold hover:bg-zinc-100 font-sans focus:ring focus:ring-green-50 ">Log
                     in</a>
                 <a href="#"
-                    class="px-6 py-2 text-lg border-solid rounded-3xl bg-green-400 text-slate-50 font-bold hover:bg-green-600 font-sans focus:ring focus:ring-green-50">Sign
+                    class="px-6 py-2 text-lg border-solid rounded-3xl bg-purple-700 text-black font-bold hover:bg-zinc-100 font-sans focus:ring focus:ring-green-50">Sign
                     up</a>
             </div>
             <header>
                 <div class="container columns-2">
                     <div class="mt-20">
-                        <h2 class="text-green-500 font-black text-5xl text-center font-serif italic  ">
+                        <h2 class="text-black font-black text-6xl text-center font-serif italic  ">
                             WELCOME TO
                             <br>
                             FoodGasm
                         </h2>
-                        <h3 class="font-medium text-2xl mt-5 text-center my-4 font-serif text-neutral-50 italic">We
+                        <h3 class="font-medium text-2xl mt-5 text-center my-4 font-serif text-slate-100 italic">We
                             serve
                             you the
                             best meals <br>with high quality at affordable prices</h3>
                     </div>
                     <div class="text-center mt-5">
                         <button type="button"
-                            class="px-6 py-2 text-lg border-solid rounded-3xl bg-green-400 text-neutral-50 font-bold hover:bg-slate-900 font-sans focus:ring focus:ring-neutral-50">Order
+                            class="px-6 py-2 text-lg border-solid rounded-3xl bg-purple-700 text-black font-bold hover:bg-zinc-100 font-sans focus:ring focus:ring-neutral-50">Order
                             now</button>
                     </div>
 
                     <div class="bg-contain">
-                        <img src="img/pancake.jpg" alt="">
+                        <img src="img/kitchen1.jpg" alt="">
                     </div>
 
                 </div>
             </header>
-    </div>
+        </main>
     </div>
 </body>
 
