--- a/public/index.html
+++ b/public/index.html
@@ -42,14 +42,14 @@
 
             <div class="flex justify-end gap-x-6 relative items-baseline bottom-24">
                 <a href="#"
-                    class="px-6 py-2 text-lg border-solid rounded-3xl bg-purple-700 text-black font-bold hover:bg-zinc-100 font-sans focus:ring focus:ring-green-50 ">Log
+                    class="px-6 py-2 text-lg border-solid rounded-3xl bg-purple-700 text-black font-bold hover:bg-zinc-100 font-sans focus:ring focus:ring-green-50 shadow-lg shadow-blue-500/50">Log
                     in</a>
                 <a href="#"
-                    class="px-6 py-2 text-lg border-solid rounded-3xl bg-purple-700 text-black font-bold hover:bg-zinc-100 font-sans focus:ring focus:ring-green-50">Sign
+                    class="px-6 py-2 text-lg border-solid rounded-3xl bg-purple-700 text-black font-bold hover:bg-zinc-100 font-sans focus:ring focus:ring-green-50 shadow-lg shadow-blue-500/50">Sign
                     up</a>
             </div>
             <header>
-                <div class="container columns-2">
+                <div class="container columns-2 mt-20 ">
                     <div class="mt-20">
                         <h2 class="text-black font-black text-6xl text-center font-serif italic  ">
                             WELCOME TO
@@ -61,20 +61,118 @@
                             you the
                             best meals <br>with high quality at affordable prices</h3>
                     </div>
-                    <div class="text-center mt-5">
+                    <div class="text-center mt-5 ">
                         <button type="button"
-                            class="px-6 py-2 text-lg border-solid rounded-3xl bg-purple-700 text-black font-bold hover:bg-zinc-100 font-sans focus:ring focus:ring-neutral-50">Order
-                            now</button>
+                            class="px-6 py-2 text-lg border-solid rounded-3xl bg-purple-700 text-black font-bold hover:bg-zinc-100 font-sans focus:ring focus:ring-neutral-50 shadow-lg shadow-blue-500/50">Order
+                            now ➡️</button>
+                        <button type="button"
+                            class="px-6 py-2 text-lg border-solid rounded-3xl bg-purple-700 text-black font-bold hover:bg-zinc-100 font-sans focus:ring focus:ring-neutral-50 shadow-lg shadow-blue-500/50">Book
+                            a Table 📃
+                        </button>
                     </div>
 
                     <div class="bg-contain">
-                        <img src="img/kitchen1.jpg" alt="">
+                        <img src="img/kitchen1.jpg" alt="" class="w-full h-full object-cover">
                     </div>
 
                 </div>
             </header>
+            <div class="mt-28 text-center">
+                <h1 class="text-5xl italic "> RECIPES</h1>
+            </div>
         </main>
     </div>
+
+    <div class="bg-gray-100">
+        <h4 class="font-bold mt-12 pb-2 border-b border-gray-100 text-2xl"> New Recipes</h4>
+
+        <div class="mt-8 grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10 mx-4">
+            <!-- cards go here -->
+            <div class="card bg-white rounded-3xl overflow-hidden shadow-lg relative">
+                <img src="img/burger.jpg" alt="" class="w-full h-32 sm:h-48 object-cover">
+                <div class="m-4 text-center ">
+                    <!-- cad title -->
+                    <span class="font-bold text-2xl">name</span>
+                    <p class="font-bold text-xl">price</p>
+                </div>
+                <div class="uppercase font-bold rounded-full bg-gray-500 p-2 absolute  top-0 ml-2 mt-2">
+                    <span>25 mins</span>
+                </div>
+            </div>
+
+
+            <div class="card  bg-white rounded-3xl overflow-hidden shadow-lg relative">
+                <img src="img/burger.jpg" alt="" class="w-full h-32 sm:h-48 object-cover">
+                <div class="m-4 text-center">
+                    <!-- cad title -->
+                    <span class="font-bold text-2xl">name</span>
+                    <p class="font-bold text-xl">price</p>
+                </div>
+                <div class="uppercase font-bold rounded-full bg-gray-500 p-2 absolute  top-0 ml-2 mt-2">
+                    <span>25 mins</span>
+                </div>
+            </div>
+
+
+            <div class="card  bg-white rounded-3xl overflow-hidden shadow-lg relative">
+                <img src="img/burger.jpg" alt="" class="w-full h-32 sm:h-48 object-cover">
+                <div class="m-4 text-center">
+                    <!-- cad title -->
+                    <span class="font-bold text-2xl">name</span>
+                    <p class="font-bold text-xl">price</p>
+                </div>
+                <div class="uppercase font-bold rounded-full bg-gray-500 p-2 absolute  top-0 ml-2 mt-2">
+                    <span>25 mins</span>
+                </div>
+            </div>
+
+
+
+            <div class="card  bg-white rounded-3xl overflow-hidden shadow-lg relative">
+                <img src="img/burger.jpg" alt="" class="w-full h-32 sm:h-48 object-cover">
+                <div class="m-4 text-center">
+                    <!-- cad title -->
+                    <span class="font-bold text-2xl">name</span>
+                    <p class="font-bold text-xl">price</p>
+                </div>
+                <div class="uppercase font-bold rounded-full bg-gray-500 p-2 absolute  top-0 ml-2 mt-2">
+                    <span>25 mins</span>
+                </div>
+            </div>
+
+
+
+            <div class="card  bg-white rounded-3xl overflow-hidden shadow-lg relative ">
+                <img src="img/burger.jpg" alt="" class="w-full h-32 sm:h-48 object-cover">
+                <div class="m-4 text-center">
+                    <!-- cad title -->
+                    <span class="font-bold text-2xl">name</span>
+                    <p class="font-bold text-xl">price</p>
+                </div>
+                <div class="uppercase font-bold rounded-full bg-gray-500 p-2 absolute  top-0 ml-2 mt-2">
+                    <span>25 mins</span>
+                </div>
+            </div>
+
+
+
+            <div class="card  bg-white rounded-3xl overflow-hidden shadow-lg relative">
+                <img src="img/burger.jpg" alt="" class="w-full h-28 sm:h-48 object-cover ">
+                <div class="m-4 text-center">
+                    <!-- cad title -->
+                    <span class="font-bold text-2xl">name</span>
+                    <p class="font-bold text-xl">price</p>
+                </div>
+                <div class="uppercase font-bold rounded-full bg-gray-500 p-2 absolute  top-0 ml-2 mt-2">
+                    <span>25 mins</span>
+                </div>
+            </div>
+
+
+        </div>
+    </div>
+
+
 </body>
 
 </html>
