added a most popular section

--- a/public/index.html
+++ b/public/index.html
@@ -83,17 +83,17 @@
         </main>
     </div>
 
-    <div class="bg-gray-100">
-        <h4 class="font-bold mt-12 pb-2 border-b border-gray-100 text-2xl"> New Recipes</h4>
+    <div class="bg-gray-200">
+        <h4 class="font-bold mt-4 mb-6 pb-2 border-b border-gray-100 text-2xl"> Latest Recipes</h4>
 
         <div class="mt-8 grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10 mx-4">
             <!-- cards go here -->
             <div class="card bg-white rounded-3xl overflow-hidden shadow-lg relative">
-                <img src="img/burger.jpg" alt="" class="w-full h-32 sm:h-48 object-cover">
+                <img src="img/stirfry.jpg" alt="" class="w-full h-32 sm:h-48 object-cover">
                 <div class="m-4 text-center ">
                     <!-- cad title -->
-                    <span class="font-bold text-2xl">name</span>
-                    <p class="font-bold text-xl">price</p>
+                    <span class="font-bold text-2xl">Stir-fry Spaghetti</span>
+                    <p class="font-bold text-slate-500 text-xl mt-4 bg-zinc-200 p-1 rounded-lg">₦3500</p>
                 </div>
                 <div class="uppercase font-bold rounded-full bg-gray-500 p-2 absolute  top-0 ml-2 mt-2">
                     <span>25 mins</span>
@@ -102,11 +102,12 @@
 
 
             <div class="card  bg-white rounded-3xl overflow-hidden shadow-lg relative">
-                <img src="img/burger.jpg" alt="" class="w-full h-32 sm:h-48 object-cover">
+                <img src="img/10.JPG" alt="" class="w-full h-32 sm:h-48 object-fill">
                 <div class="m-4 text-center">
                     <!-- cad title -->
-                    <span class="font-bold text-2xl">name</span>
-                    <p class="font-bold text-xl">price</p>
+                    <p class="font-bold text-2xl">Chicken Shawarma</p>
+                    <p class="font-bold text-slate-500 text-xl mt-4 bg-zinc-200 p-1 rounded-lg">₦2500</p>
+
                 </div>
                 <div class="uppercase font-bold rounded-full bg-gray-500 p-2 absolute  top-0 ml-2 mt-2">
                     <span>25 mins</span>
@@ -115,62 +116,84 @@
 
 
             <div class="card  bg-white rounded-3xl overflow-hidden shadow-lg relative">
-                <img src="img/burger.jpg" alt="" class="w-full h-32 sm:h-48 object-cover">
+                <img src="img/burgers.webp" alt="" class="w-full h-32 sm:h-48 object-cover">
                 <div class="m-4 text-center">
                     <!-- cad title -->
                     <span class="font-bold text-2xl">name</span>
-                    <p class="font-bold text-xl">price</p>
+                    <p class="font-bold text-slate-500 text-xl mt-4 bg-zinc-200 p-1 rounded-lg">₦price</p>
                 </div>
                 <div class="uppercase font-bold rounded-full bg-gray-500 p-2 absolute  top-0 ml-2 mt-2">
                     <span>25 mins</span>
                 </div>
             </div>
-
-
-
-            <div class="card  bg-white rounded-3xl overflow-hidden shadow-lg relative">
-                <img src="img/burger.jpg" alt="" class="w-full h-32 sm:h-48 object-cover">
-                <div class="m-4 text-center">
-                    <!-- cad title -->
-                    <span class="font-bold text-2xl">name</span>
-                    <p class="font-bold text-xl">price</p>
-                </div>
-                <div class="uppercase font-bold rounded-full bg-gray-500 p-2 absolute  top-0 ml-2 mt-2">
-                    <span>25 mins</span>
-                </div>
-            </div>
-
-
-
-            <div class="card  bg-white rounded-3xl overflow-hidden shadow-lg relative ">
-                <img src="img/burger.jpg" alt="" class="w-full h-32 sm:h-48 object-cover">
-                <div class="m-4 text-center">
-                    <!-- cad title -->
-                    <span class="font-bold text-2xl">name</span>
-                    <p class="font-bold text-xl">price</p>
-                </div>
-                <div class="uppercase font-bold rounded-full bg-gray-500 p-2 absolute  top-0 ml-2 mt-2">
-                    <span>25 mins</span>
-                </div>
-            </div>
-
-
-
-            <div class="card  bg-white rounded-3xl overflow-hidden shadow-lg relative">
-                <img src="img/burger.jpg" alt="" class="w-full h-28 sm:h-48 object-cover ">
-                <div class="m-4 text-center">
-                    <!-- cad title -->
-                    <span class="font-bold text-2xl">name</span>
-                    <p class="font-bold text-xl">price</p>
-                </div>
-                <div class="uppercase font-bold rounded-full bg-gray-500 p-2 absolute  top-0 ml-2 mt-2">
-                    <span>25 mins</span>
-                </div>
-            </div>
-
 
         </div>
     </div>
+
+
+    <div class="text-center mt-10 mb-16 ">
+        <button type="button"
+            class="px-6 py-2 text-lg border-solid rounded-3xl bg-gray-400 text-black font-bold hover:bg-zinc-100 font-sans focus:ring focus:ring-neutral-50 shadow-lg shadow-blue-500/50">Load
+            More </button>
+    </div>
+
+
+    <!-- most popular -->
+    <div class="bg-gray-200 mt-4">
+
+        <h4 class="font-bold mt-4 mb-6 pb-2 border-b border-gray-100 text-2xl"> Latest Recipes</h4>
+
+        <div class="mt-8 grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10 mx-4">
+
+            <!-- cards go here -->
+
+            <div class="card bg-white rounded-3xl overflow-hidden shadow-lg relative">
+                <img src="img/jollof3.jpeg" alt="" class="w-full h-32 sm:h-48 object-cover">
+                <div class="m-4 text-center ">
+                    <!-- cad title -->
+                    <span class="font-bold text-2xl">Stir-fry Spaghetti</span>
+                    <p class="font-bold text-slate-500 text-xl mt-4 bg-zinc-200 p-1 rounded-lg">₦3500</p>
+                </div>
+                <div class="uppercase font-bold rounded-full bg-gray-500 p-2 absolute  top-0 ml-2 mt-2">
+                    <span>25 mins</span>
+                </div>
+            </div>
+
+
+            <div class="card bg-white rounded-3xl overflow-hidden shadow-lg relative">
+                <img src="img/8.JPG" alt="" class="w-full h-32 sm:h-48 object-cover">
+                <div class="m-4 text-center ">
+                    <!-- cad title -->
+                    <span class="font-bold text-2xl">Stir-fry Spaghetti</span>
+                    <p class="font-bold text-slate-500 text-xl mt-4 bg-zinc-200 p-1 rounded-lg">₦3500</p>
+                </div>
+                <div class="uppercase font-bold rounded-full bg-gray-500 p-2 absolute  top-0 ml-2 mt-2">
+                    <span>25 mins</span>
+                </div>
+            </div>
+
+
+            <div class="card bg-white rounded-3xl overflow-hidden shadow-lg relative">
+                <img src="img/pancake.jpg" alt="" class="w-full h-32 sm:h-48 object-cover">
+                <div class="m-4 text-center ">
+                    <!-- cad title -->
+                    <span class="font-bold text-2xl">Stir-fry Spaghetti</span>
+                    <p class="font-bold text-slate-500 text-xl mt-4 bg-zinc-200 p-1 rounded-lg">₦3500</p>
+                </div>
+                <div class="uppercase font-bold rounded-full bg-gray-500 p-2 absolute  top-0 ml-2 mt-2">
+                    <span>25 mins</span>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <div class="text-center mt-10 mb-16 ">
+        <button type="button"
+            class="px-6 py-2 text-lg border-solid rounded-3xl bg-gray-400 text-black font-bold hover:bg-zinc-100 font-sans focus:ring focus:ring-neutral-50 shadow-lg shadow-blue-500/50">Load
+            More </button>
+    </div>
+
+
 
 
 </body>
